Kubecost/middleware_auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kubecost-basic-auth
  namespace: kubecost
spec:
  basicAuth:
    secret: kubecost-basic-auth
