Kubecost/Ingress_kubecost_traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubecost-ingress-traefik
  namespace: kubecost
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: kubecost-kubecost-basic-auth@kubernetescrd
    cert-manager.io/cluster-issuer: "letsencrypt-prod-traefik"  # Ensure this matches your ClusterIssuer's name
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - kubecosttraefik.duckdns.org 
    secretName: kubecost-tls-traefik
  rules:
  - host: kubecosttraefik.duckdns.org 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubecost-cost-analyzer
            port:
              number: 9090
